--- a/public/stylesheets/sass/header.sass
+++ b/public/stylesheets/sass/header.sass
@@ -4,9 +4,9 @@
       a
         :float left
         :display block
-        :background url(/images/header_logo.jpg) no-repeat
-        :width 95px
-        :height 17px      
+        :background url(/images/header_logo_white.png) no-repeat
+        :width 134px
+        :height 24px      
       span
         :display none
     div.user_wrap
