--- a/public/stylesheets/sass/tasks/item.sass
+++ b/public/stylesheets/sass/tasks/item.sass
@@ -3,6 +3,7 @@ div.task_list_wrap
   .tasks_wrap
     :background url(../images/task_arrow.png) no-repeat top left
     :padding-top 8px
+    :overflow hidden
     .tasks
       :-moz-border-radius
         :topleft 5px
