--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -6,7 +6,8 @@
     %title
       = @page_title
       Teambox
-    = stylesheet_link_tag 'application', :media => "all"
+    = stylesheet_link_tag 'application', :media => :all
+    = stylesheet_link_tag 'custom', :media => :screen
     = sprockets_include_tag
     - javascript_tag do
       = yield :js_templates
