Deletion for Pages and Uploads
Pages are now a Role Record class.
Formatted Uploads partials from Upload#index
Protecting destroy so only authorized users can do it

--- a/app/views/pages/_actions.haml
+++ b/app/views/pages/_actions.haml
@@ -1,4 +1,5 @@
 .text_actions
   = edit_page_link(@current_project, @page)
-  = #t('common.or')
-  = #delete_page_link(@current_project, @page)
+  - if @page.editable?(current_user)
+    = t('common.or')
+    = delete_page_link(@current_project, @page)
