--- a/app/views/pages/show.haml
+++ b/app/views/pages/show.haml
@@ -2,7 +2,7 @@
 
 .page_header
   = page_action_links(@current_project,@task_list)
-  %h2= @page.name
+  %h2= @page
   .description= @page.description
 
 = page_buttons(@current_project,@page)
