--- a/app/views/uploads/index.haml
+++ b/app/views/uploads/index.haml
@@ -2,7 +2,9 @@
   = add_upload_link(@current_project) if @upload.errors.empty?
   = upload_form(@current_project,@upload)
   
-=list_uploads(@current_project,@uploads)
-- if false
-  = javascript_tag "FancyZoomBox.directory = 'http://localhost:3000/images/zoom';" 
-  = javascript_tag "$$('a.fancyzoom').each(function(e) { new FancyZoom(e) })"
+  %p= t('.max_upload_size', :mb => APP_CONFIG['asset_max_file_size'])
+  
+= list_uploads(@current_project,@uploads)
+
+/ = javascript_tag "FancyZoomBox.directory = 'http://localhost:3000/images/zoom';" 
+/ = javascript_tag "$$('a.fancyzoom').each(function(e) { new FancyZoom(e) })"
