--- a/public/stylesheets/sass/uploads.sass
+++ b/public/stylesheets/sass/uploads.sass
@@ -144,6 +144,7 @@ body.iframe
   :background rgb(255,255,255)
   
 .upload_form
+  :margin-bottom 10px
   .text_field
     :padding-right 10px
     input
