--- a/app/views/people/index.haml
+++ b/app/views/people/index.haml
@@ -1,5 +1,5 @@
 = invite_form(@current_project,Invitation.new)
 
 #people.people
-  = list_invitations(@current_project,@invitations)
+  = list_invitations_for_project(@current_project,@invitations)
   = list_people(@current_project,@people)
