Restyling the background so it's now light

--- a/public/stylesheets/sass/custom.sass
+++ b/public/stylesheets/sass/custom.sass
@@ -1,10 +1,10 @@
 body, .development
-  :background rgb(240,240,240)
+  :background rgb(245,245,245)
 
 div.header
   h1
     a
-      :background url(/images/header_logo.png) no-repeat
+      :background url(/images/header_logo_black.png) no-repeat
 
 div.column_wrap
   div.column
@@ -18,7 +18,7 @@ div.navigation
           :color rgb(120,120,120)
         a:hover
           :color rgb(20,20,20)
-          :background rgb(240,240,240)
+          :background rgb(245,245,245)
           :text-decoration underline
         a.active
           :color rgb(48,48,48)
@@ -31,8 +31,9 @@ div.global_navigation
       a
         :color rgb(70,70,70)
       a:hover,a.active
-        :color rgb(255,255,0)
+        :color rgb(90,158,167)
+      a.active
+        :font-weight bold
         
 div.project_navigation
   :background rgb(160,228,237)
-        
