Adding blockquote style to textilized elements

--- a/public/stylesheets/sass/textilized.sass
+++ b/public/stylesheets/sass/textilized.sass
@@ -16,6 +16,13 @@
     :margin 2px 0 10px
   a
     :text-decoration underline
+  blockquote
+    :color rgb(140,140,140)
+    :border-left 3px solid #ccc
+    :margin 0
+      :left 5px
+    :padding 0
+      :left 10px
   pre
     :-moz-background-clip border
     :-moz-background-inline-policy continuous
