--- a/app/views/emailer/notify_task_list.haml
+++ b/app/views/emailer/notify_task_list.haml
@@ -23,4 +23,5 @@
       = t('emailer.notify.are_watching')
 
     %p
-      = t('emailer.notify.notification_settings', :stop_watching_url => project_task_list_url(@project, @task_list))
+      = t('emailer.notify.stop_watching', :stop_watching_url => project_task_list_url(@project, @task_list))
+      = t('emailer.notify.notification_settings', :url => account_settings_url)
