--- a/app/views/emailer/notify_task.haml
+++ b/app/views/emailer/notify_task.haml
@@ -31,4 +31,5 @@
       = t('emailer.notify.are_watching')
 
     %p
-      = t('emailer.notify.notification_settings', :stop_watching_url => project_task_list_task_url(@project, @task_list, @task))
+      = t('emailer.notify.stop_watching', :stop_watching_url => project_task_list_task_url(@project, @task_list, @task))
+      = t('emailer.notify.notification_settings', :url => account_settings_url)
