Pointing to notification settings for email footers

--- a/app/views/emailer/notify_comment.haml
+++ b/app/views/emailer/notify_comment.haml
@@ -16,4 +16,4 @@
 
   .footer{ :style => email_text(:small) }
     %p
-      = t('emailer.notify.notification_settings', :url => account_settings_url)
+      = t('emailer.notify.notification_settings', :url => account_notifications_url)
