--- a/app/views/emailer/notify_task_list.haml
+++ b/app/views/emailer/notify_task_list.haml
@@ -24,4 +24,4 @@
 
     %p
       = t('emailer.notify.stop_watching', :stop_watching_url => project_task_list_url(@project, @task_list))
-      = t('emailer.notify.notification_settings', :url => account_settings_url)
+      = t('emailer.notify.notification_settings', :url => account_notifications_url)
