--- a/app/views/emailer/notify_task.haml
+++ b/app/views/emailer/notify_task.haml
@@ -32,4 +32,4 @@
 
     %p
       = t('emailer.notify.stop_watching', :stop_watching_url => project_task_list_task_url(@project, @task_list, @task))
-      = t('emailer.notify.notification_settings', :url => account_settings_url)
+      = t('emailer.notify.notification_settings', :url => account_notifications_url)
