strikethrough tasks when rejected or resolved

--- a/public/stylesheets/sass/tasks/item.sass
+++ b/public/stylesheets/sass/tasks/item.sass
@@ -53,3 +53,10 @@ div.task_list_wrap
   :background rgb(0,200,0)
 .active_rejected
   :background rgb(200,0,0)
+  
+.task_item_resolved,.task_item_rejected
+  a.name
+    :text-decoration line-through
+    :font-style italic
+    :color rgb(60,60,60)
+  
