--- a/app/views/tasks/_td_task.haml
+++ b/app/views/tasks/_td_task.haml
@@ -1,8 +1,8 @@
 %tr{ :class => "#{'overdue' if task.overdue? && task.open? } #{ 'mine' if task.assigned_to?(current_user) && task.open?}"}
   %td.status
     =task_status(task,:content)
-  %td.name
-    = link_to task.name, project_task_list_task_path(project,task_list,task)
+  %td.name{ :class => "task_item_#{task.status_name}"}
+    = link_to task.name, project_task_list_task_path(project,task_list,task), :class => 'name'
     - unless (task.due_on.nil? && task.unassigned?) || task.closed?
       %span.assigned
         - if task.due_on
