--- a/public/stylesheets/sass/comments/form.sass
+++ b/public/stylesheets/sass/comments/form.sass
@@ -64,7 +64,8 @@ form#new_comment
     :text-align right
     :float right
     :width 200px
-
+  .loading
+    :float right  
 form.reopen
   :background rgb(255,255,200)
   :border 1px rgb(220,220,150) solid  
