--- a/app/views/activities/_activity_line.haml
+++ b/app/views/activities/_activity_line.haml
@@ -3,7 +3,7 @@
 
   -if activity.action_type == 'create_person'
     %span.name
-      = link_to activity.user.name, user_path(activity.user)
+      = link_to activity.target.user.name, user_path(activity.target.user)
     %span
       = t(".#{activity.action_type}")
     = activity_project_link(activity.project) if location_name?('index_projects')
