Better errors for signup

--- a/app/views/users/new.haml
+++ b/app/views/users/new.haml
@@ -2,7 +2,10 @@
 
 %h2= t('.title')
 
+%p= t('.existing_user', :login_url => login_path, :forgot_url => forgot_password_path)
+
 - form_for @user do |f|
   = user_fields(f, @user, :invite => @invite)
+  %br
   .submit
     = submit_tag t('.submit'), :tabindex => 300
