--- a/app/views/users/_fields.haml
+++ b/app/views/users/_fields.haml
@@ -2,20 +2,24 @@
   -if user.new_record? or sub_action == 'settings'
     .login.text_field
       = f.label :login, t('.login')
+      = errors_for user, :login
       = f.text_field :login
       = tooltip 'user_login', t('.tooltips.login')
   -if user.new_record? or sub_action == 'profile'
     .first_name.text_field
       = f.label :first_name, t('.first_name')
+      = errors_for user, :first_name
       = f.text_field :first_name
       = tooltip 'user_first_name', t('.tooltips.first_name')
     .last_name.text_field
       = f.label :last_name, t('.last_name')
+      = errors_for user, :last_name
       = f.text_field :last_name
     = tooltip 'user_last_name', t('.tooltips.last_name')
   -if user.new_record? or sub_action == 'settings'
     .email.text_field
       = f.label :email, t('.email')
+      = errors_for user, :email
       = f.text_field :email
       = tooltip 'user_email', t('.tooltips.email')
 
@@ -29,12 +33,14 @@
   #password_fields{ :style => "#{ 'display: none' unless user.new_record? }"}
     .password.text_field
       = f.label :password
+      = errors_for user, :password
       = f.password_field :password
       -unless sub_action == 'settings'
         = password_strength :password_strength, 'user_password'
         = tooltip 'user_password', t('.tooltips.password')
     .password.text_field
       = f.label :password_confirmation, t('.confirm_password')
+      = errors_for user, :password_confirmation
       = f.password_field :password_confirmation
 
 - unless user.new_record?
