Styling public pages according to the new public page

--- a/app/views/shared/_latest_announcement.haml
+++ b/app/views/shared/_latest_announcement.haml
@@ -1,4 +1,3 @@
 - if t('latest_announcement').length > 5
-  #primer
-    .box{ :style => 'font-size:12px;margin:5px'}
-      %p= t('latest_announcement')
+  .box
+    %p= t('latest_announcement')
