--- a/app/views/reset_passwords/new.haml
+++ b/app/views/reset_passwords/new.haml
@@ -1,9 +1,11 @@
 %h2= t('.title')
 
--form_for(@reset_password) do |f|
+- form_for(@reset_password) do |f|
   .email.text_field
     = f.label :email
+    = errors_for @reset_password, :email
     = f.text_field :email, :class => 'focus'
   .submit
-    = link_to t('.back'), login_path
     = submit_tag t('.submit')
+
+= link_to t('.back'), login_path
