Restyled Tasks to be more clear visually and align. Enabling edit and delete actions for task lists.

--- a/public/stylesheets/sass/tasks/default.sass
+++ b/public/stylesheets/sass/tasks/default.sass
@@ -23,7 +23,7 @@ a.new_task_link
   :-webkit-border-bottom-right-radius 5px
   
 span.task_status, span.current_task_status
-  :padding 1px 5px
+  :padding 0 3px
   :text-transform uppercase
   :color rgb(255,255,255)
   :font-size 11px
