--- a/app/views/tasks/_td_task.haml
+++ b/app/views/tasks/_td_task.haml
@@ -5,8 +5,7 @@
     = link_to task.name, project_task_list_task_path(project,task_list,task), :class => 'name'
     - unless (task.due_on.nil? && task.unassigned?) || task.closed?
       %span.assigned
-        - if task.due_on
-          = due_on(task)
+        = due_on(task) if task.due_on
         - unless sub_action == 'mine'
           = "-" unless task.assigned.nil? || task.due_on.nil?
-          = link_to task.assigned.name, user_path(task.assigned.user) unless task.assigned.nil?
+          = link_to task.assigned.short_name, user_path(task.assigned.user) if task.assigned
