--- a/public/stylesheets/sass/tasks/item.sass
+++ b/public/stylesheets/sass/tasks/item.sass
@@ -1,15 +1,8 @@
 div.task_list_wrap
-  :margin-top 10px  
+  :margin-bottom 20px
   .tasks_wrap
-    :background url(../images/task_arrow.png) no-repeat top left
-    :padding-top 8px
-    :overflow hidden
+    :overflow-x hidden
     .tasks
-      :-moz-border-radius
-        :topleft 5px
-        :topright 5px
-      :-webkit-border-top-left-radius 5px
-      :-webkit-border-top-right-radius 5px
       :border solid 1px rgb(210,210,210)
         :bottom 0px
       :background rgb(240,240,240)
@@ -28,10 +21,38 @@ div.task_list_wrap
   div.task_list, div.task
     :font-size 12px
   div.task_list
-    :margin-bottom 5px
-    :padding 0px 3px
+    :padding 3px 0 3px 6px
+    :background rgb(240,240,240)
+    :border solid 1px rgb(210,210,210)
+      :bottom 0px
+    :-moz-border-radius 0
+      :topleft 5px
+      :topright 5px
+    :-webkit-border 0px
+      :top-left-radius 5px
+      :top-right-radius 5px
+    a
+      :text-shadow rgb(180,180,180) 1px 1px 1px
+    .comments_count
+      :float right
+      :color rgb(180,180,180)
+      :background none
+    &.active_list
+      :background rgb(50,50,250)
+      :border 0
+      a
+        :color white
+        :text-shadow none
+  span.task_status, span.current_task_status
+    :padding 0
+    :display inline-block
+    :width 20px
+    :text-align center
+
   div.task
     :margin 4px 0px
+    img.drag
+      :padding 0 3px
 
 .active_new,.active_open,.active_hold,.active_resolved,.active_rejected
   :-moz-border-radius 5px
