Small UI tweaks to user page

--- a/public/stylesheets/sass/tasks/item.sass
+++ b/public/stylesheets/sass/tasks/item.sass
@@ -1,4 +1,7 @@
 div.task_list_wrap
+  :-webkit-box-shadow #EEE 2px 2px 2px
+  :-moz-box-shadow #EEE 2px 2px 2px
+  :box-shadow #EEE 2px 2px 2px
   :margin-bottom 20px
   .tasks_wrap
     :overflow-x hidden
@@ -28,7 +31,7 @@ div.task_list_wrap
     :-moz-border-radius 0
       :topleft 5px
       :topright 5px
-    :-webkit-border 0px
+    :-webkit-border 0
       :top-left-radius 5px
       :top-right-radius 5px
     a
@@ -52,7 +55,7 @@ div.task_list_wrap
   div.task
     :margin 4px 0px
     img.drag
-      :padding 0 3px
+      :padding 0 4px
 
 .active_new,.active_open,.active_hold,.active_resolved,.active_rejected
   :-moz-border-radius 5px
