--- a/public/stylesheets/sass/users/show.sass
+++ b/public/stylesheets/sass/users/show.sass
@@ -52,3 +52,6 @@
       :padding
         :bottom 5px
       :border-bottom solid 2px rgb(240,240,240)
+    .comment
+      span.author, span.project_arr
+        :display none
