Removing comment count from task list and conversation headers.

--- a/public/stylesheets/comments/default.css
+++ b/public/stylesheets/comments/default.css
@@ -6,3 +6,9 @@ span.comments_count {
   -webkit-border-radius: 4px;
   color: rgb(255,255,255);
   background: rgb(170,170,170); }
+
+#column span.comments_count {
+  padding: 0;
+  display: inline-block;
+  width: 20px;
+  text-align: center; }
