--- a/app/views/tasks/_task.haml
+++ b/app/views/tasks/_task.haml
@@ -1,5 +1,6 @@
 .task{ :id => task_id(:item,project,task_list,task), :class => "#{ "active_#{task.status_name}" if current_target == task } task_item task_item_#{task.status_name}" }
   = task_status(task,:column)
   = task_drag_link(task)
-  = link_to task.name, project_task_list_task_path(project,task_list,task), :class => 'name'
+  - mine = (task.assigned.try(:user_id) == current_user.id) ? 'mine' : ''
+  = link_to task.name, project_task_list_task_path(project,task_list,task), :class => "name #{mine}"
 .clear
