--- a/app/views/uploads/_upload.haml
+++ b/app/views/uploads/_upload.haml
@@ -14,6 +14,7 @@
           %br
           = t('.uploaded_by')
           = user_link(upload.user)
+          = activity_comment_target_link(upload.comment, t('.on_')) if upload.comment
           - if upload.editable?(current_user)
             = " - "
             = destroy_upload_link(project,upload)
@@ -34,4 +35,3 @@
           = upload_link(project,upload)
           = number_to_human_size(upload.size)
   .clear
-
