--- a/public/stylesheets/sass/pages/notes.sass
+++ b/public/stylesheets/sass/pages/notes.sass
@@ -17,18 +17,7 @@
   :padding-bottom 5px
   :margin 5px 0px
   p.actions
-    :position relative
+    :float right
     :margin 0px
-    span    
-      :background rgb(255,255,255)
-      :-moz-border-radius 4px
-      :-webkit-border-radius 4px
-      :padding 3px 0px
-        :left 2px
-        :bottom 0px
-      :position absolute
-      :display block
-      :width 42px
-      :height 18px
-      :left -44px
-      :top 2px
+    a.delete
+      :color red
