--- a/app/views/comments/_new.haml
+++ b/app/views/comments/_new.haml
@@ -1,7 +1,8 @@
 -comment_form_for(form_url) do |f|
   = hidden_field_tag :original_controller, controller_name
   .body.text_area
-    = f.text_area :body, :class => 'comment_body'
+    = f.text_area :body, :class => 'comment_body', :id => 'comment_body'
+    = autoresize :comment_body
   .extra
     - if comment.project
       = the_comment_upload_link(comment)
