--- a/public/stylesheets/sass/pages.sass
+++ b/public/stylesheets/sass/pages.sass
@@ -5,8 +5,14 @@ div.active_page
   :clear both
   :margin-top 10px
   div.page
-    a
-      :font-size 12px
+    :font-size 12px
+
+#pages
+  div.page
+    :font-size 12px
+    ul
+      :margin 5px 0
+      :padding-left 20px
 
 .new_pages, .edit_pages
   .content 
@@ -46,8 +52,9 @@ div.active_page
   :padding 5px
   .content
     h2
-      :margin 0px
-        :bottom 10px
+      :margin 3px
+        :left 20px
+        :bottom 20px
     .page
       :padding
         :left 20px
@@ -74,8 +81,8 @@ div.active_page
     h2
       :font-size 16px
       :margin
-        :top 0px
-        :bottom 3px
+        :top 5px
+        :bottom 20px
     .text_actions
       :margin-top 5px
       :float right
