--- a/public/stylesheets/sass/projects/show.sass
+++ b/public/stylesheets/sass/projects/show.sass
@@ -16,12 +16,11 @@
     :font-size 12px
     :color rgb(150,150,150)
   #activities
-    .comment
-      .name
-        .author
-        .project, .project_arr
-          :display none
-        .target, .target_arr
+    .comment, .activity, .upload
+      .author
+      .project, .project_arr
+        :display none
+      .target, .target_arr
 .index_conversations, .show_conversations, .show_tasks
   .comment
     .name
@@ -30,4 +29,3 @@
         :display none
       .target, .target_arr
         :display none
-        
