--- a/public/stylesheets/sass/uploads.sass
+++ b/public/stylesheets/sass/uploads.sass
@@ -53,7 +53,8 @@
     :width 560px
     :float right
     .description
-      :padding-bottom 5px
+      :color #999
+      :font-style italic
     .name
       :font-size 12px
       :margin-bottom 5px
@@ -87,7 +88,6 @@
   :clear both
   .upload_thumbnail
     :padding 3px 0px
-    :border-top 1px solid rgb(230,230,230)
     :font-size 12px
     %span
       :vertical-align top
@@ -159,3 +159,7 @@ body.iframe
       :margin 0px
   .submit
     :margin-top 10px
+    
+.link_to_upload
+  :display inline-block
+  :border 1px solid rgb(230,230,230)
