Using mobile version from iPhones

--- a/public/stylesheets/sass/mobile.sass
+++ b/public/stylesheets/sass/mobile.sass
@@ -27,8 +27,8 @@ body
     :position relative
     a
       :-webkit-box-sizing border-box
-      :background-color #B0E1Ed
-      :border 1px solid #B0E1Ed
+      :background-color #B0E1ED
+      :border 1px solid #B0E1ED
       :color #0083A2
       :display block
       :float left
