--- a/app/views/task_lists/_column.haml
+++ b/app/views/task_lists/_column.haml
@@ -7,3 +7,5 @@
   = list_task_lists(project,task_lists,sub_action,current_target)
 =# comments_settings
 =# reorder_task_list_link(project,task_lists)
+
+= print_task_lists_link(project)
