--- a/public/stylesheets/sass/tasks/index.sass
+++ b/public/stylesheets/sass/tasks/index.sass
@@ -64,6 +64,8 @@ table.task_list
         a:hover
           :text-decoration none
           :color rgb(0,0,0)
+      span.status
+        :display none      
     tr.mine
       td
         :background rgb(255,255,210)
