--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -6,8 +6,9 @@
     %title
       = @page_title
       Teambox
-    = stylesheet_link_tag 'application', :media => :all
+    = stylesheet_link_tag 'application', :media => :screen
     = stylesheet_link_tag 'custom', :media => :screen
+    = stylesheet_link_tag 'print', :media => :print
     = sprockets_include_tag
     - javascript_tag do
       = yield :js_templates
