--- a/public/stylesheets/sass/wrapper.sass
+++ b/public/stylesheets/sass/wrapper.sass
@@ -1,7 +1,7 @@
 @media screen
   div.wrapper 
     :clear both
-    :background rgb(255,255,255)
+    :background white
     :-moz-border-radius 5px
     :-webkit-border-radius 5px
   div.content_wrap
