--- a/public/stylesheets/sass/default.sass
+++ b/public/stylesheets/sass/default.sass
@@ -1,10 +1,9 @@
-/* Default------------------------------------------------------------------------
 @media screen
   html,body 
     :margin 0px 
     :padding 0px
   body
-    :background rgb(49,48,48)
+    :background url(/images/background-gradient.png) repeat-x white
     :font-family "Lucida Grande","Helvetica Neue",Verdana,Arial,Helvetica,sans-serif
   h1 
     :font-size 1.3em
@@ -55,9 +54,6 @@
   span.unread_comment_count
     :font-weight bold
     :font-size 10px
-  
-  .development
-    :background url(../images/lobster_dev.jpg) top left no-repeat rgb(49,48,48)
   
   div.destroy_message,div.archive_message
     :background rgb(231,244,153)
