Adding calendar_date_selector for Tasks and Task Lists

--- a/app/views/shared/_banner.haml
+++ b/app/views/shared/_banner.haml
@@ -1,8 +1,8 @@
 -content_for :banner do
   = upcoming_events(events)
-  = gannt_chart(chart)
+  = gantt_chart(chart)
   .banner_navigation
     %ul
       %li= calendar_banner_link
-      %li= gannt_banner_link
+      %li= gantt_banner_link
   .clear
