--- a/app/views/shared/_gantt_banner_primer.haml
+++ b/app/views/shared/_gantt_banner_primer.haml
@@ -1,2 +1,2 @@
-#gannt_banner.banner_item{:style => "#{ 'display: none' unless current_banner?(:gannt)}"}
+#gantt_banner.banner_item{:style => "#{ 'display: none' unless current_banner?(:gantt)}"}
   .primer=t('.title')
