--- a/public/stylesheets/sass/forms.sass
+++ b/public/stylesheets/sass/forms.sass
@@ -69,10 +69,10 @@ form
     :border 1px red solid
   
 .app_form
-  :background rgb(210,210,210)
-  :-moz-border-radius 5px
-  :-webkit-border-radius 5px
-  :padding 10px
+  :background rgb(255,255,220)
+  :border 1px solid rgb(200,200,120)
+  :padding 20px
+  :margin-bottom 15px
 
 .form_error
   :background rgb(255,200,200)  
