Minor styling for User#edit

--- a/public/stylesheets/sass/users/edit.sass
+++ b/public/stylesheets/sass/users/edit.sass
@@ -54,12 +54,18 @@
     input
       :width 140px
   .submit
+    :margin-top 20px
+    :padding-left 300px
     :clear both 
   .notifications
     label 
       :float none
     .notify
       :padding-bottom 7px      
+  #change_password_link
+    :margin
+      :top 20px
+      :bottom 20px
       
 div.upload_avatar
   .avatar
