Shorter invited by text

--- a/app/views/activities/_create_person.m.haml
+++ b/app/views/activities/_create_person.m.haml
@@ -5,6 +5,6 @@
     %span.user= person.user.name
     = t(".#{activity.action_type}") # was invited to the project
     = link_to activity.project, activity.project
-    = t(".by")
-    = activity.user
+    = #t(".by")
+    = #activity.user
   .clear
