--- a/app/views/activities/_create_person.haml
+++ b/app/views/activities/_create_person.haml
@@ -3,8 +3,8 @@
   = link_to person.user.name, user_path(person.user)
   = t(".#{activity.action_type}") # was invited to the project
   = link_to activity.project, activity.project unless location_name?('show_projects')
-  = t(".by")
-  = link_to activity.user, user_path(activity.user)
+  = #t(".by")
+  = #link_to activity.user, user_path(activity.user)
   .date
     = posted_date activity.posted_date
   .clear
