calendar tab works

--- a/app/views/shared/_banner.haml
+++ b/app/views/shared/_banner.haml
@@ -3,6 +3,6 @@
   = gantt_chart(chart)
   .banner_navigation
     %ul
-      %li= calendar_banner_link
-      %li= gantt_banner_link
+      %li.calendar= calendar_banner_link
+      %li.gantt_chart= gantt_banner_link
   .clear
