--- a/public/stylesheets/sass/mobile.sass
+++ b/public/stylesheets/sass/mobile.sass
@@ -7,6 +7,16 @@ body
   :-webkit-text-size-adjust none
   :background-color #EDEFF4
 
+label, input
+  :margin 2px 0
+  :display block
+
+input
+  :margin-bottom 10px
+
+form
+  :margin 10px 0
+
 #header
   h1
     :font-size 16px
@@ -118,6 +128,13 @@ body
   .comment, .activity
     .project, .project_arr
       :display none
+
+.new_sessions
+  :padding-left 10px
+  :background-color white
+  a, a:hover
+    :color rgb(150,150,150)
+    :text-decoration none
 
 #footer
   :border-top 1px solid #BDBFC4
