--- a/app/views/projects/index.m.haml
+++ b/app/views/projects/index.m.haml
@@ -2,4 +2,4 @@
   #projects
     - for project in @projects
       .project
-        = link_to project, project_path(project, :format => :m)
+        = link_to project, project_path(project)
