--- a/app/views/projects/show.m.haml
+++ b/app/views/projects/show.m.haml
@@ -4,6 +4,9 @@
 /   = link_to "Pages"
 /   = link_to "Files"
 /   = link_to "People"
+
+= new_comment_form(@current_project,@current_project.comments.new)
+
 #page
   #activities
     - for activity in @activities
